background issue on ios ipad testing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -376,7 +376,7 @@ footer i {
   .social-links {
     margin-bottom: 16px;
   }
-  .bg-img {
+  /* .bg-img {
     background-attachment: fixed;
-  }
+  } */
 }
